# eurostat-embedding

./: README.md  pyproject.toml
eurostat_embedding/: __about__.py
playground/: Eurostat.ipynb
